//指定版本
//注意proto3与proto2的写法有些不同
syntax = "proto3";

//包名，通过protoc生成时go文件时
package proto_service;

option go_package = "./proto_service";   // 编译为.go文件最好指定的参数

service UserRpc{
    //用户注册
    rpc UserAdd(User) returns (Response){}

    //用户修改
    rpc UserEdit(User) returns (Response){}

    //创建组
    rpc GroupAdd(Group) returns (Response){}

    //修改组
    rpc GroupEdit(Group) returns (Response){}

    //创建组
    rpc UserGroupAdd(UserGroup) returns (Response){}

    //修改组
    rpc UserGroupEdit(UserGroup) returns (Response){}



}



//手机类型
//枚举类型第一个字段必须为0
enum GroupOptionalType {
    DEL = 0;
    ADD = 1;

}
//注册用户 修改用户信息
message User{
    int64 project_id = 1;
    int64 uid = 2;
    string name = 3;
    optional string avatar = 4;
}

//新增  修改 用户组
message Group{
    int64 project_id = 1;
    int64 uid = 2;
    optional int64 group_id = 3;//有就修改，没有就新建
    string name = 4;
    string des = 5;
    optional string avatar = 6;
}

//用户组(加入，删除用户) 没有group_id,就是创建用户组，并加入这些人
message UserGroup{
    int64 project_id = 1;
    int64 uid = 2;
    repeated int64 uids = 3;
    int64 group_id = 4;
    GroupOptionalType optional = 5;//del / add
}

message Response{
    bool ok=1;
    string msg=2;
}




